test/files/neg/macro-invalidshape-d.check
Macros_Test_2.scala:2: error: ';' expected but '.' found.
  def foo(x: Any) = {2; macro Impls.foo}
                                   ^
one error found
